--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <dependencies>
         <dependency>
+            <!-- this is jpa framework -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -37,6 +38,7 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
+            <!-- this is web jar package  -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
